Поправить по оставшимся замечаниям